<resources>
    <string name="app_name">Tasker</string>
    <string name="login_text">LOGIN</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Retype Password</string>
    <string name="not_signed_up_yet">Click here to SignUp</string>
    <string name="remember_user">Remember me on this device</string>
    <string name="add_task_title">ADD TASK</string>
    <string name="task_title_hint">TITLE</string>
    <string name="task_comment_hint">COMMENT</string>
    <string name="task_desc_hint">DESCRIPTION</string>
    <string name="task_priority_title">PRIORITIES</string>
    <string name="task_priority_major">MAJOR</string>
    <string name="task_priority_medium">MEDIUM</string>
    <string name="task_priority_minor">MINOR</string>
    <string name="btn_add_task">add task</string>
    <string name="signup_title">SIGN UP</string>
    <string name="create_user_btn">SIGN UP</string>
    <string name="edit_task_title">EDIT TASK</string>
    <string name="edit_task_done">DONE</string>
    <string name="edit_task_done_yes">YES</string>
    <string name="edit_task_done_no">NO</string>
    <string name="task_attendant">Attendant</string>
    <string name="titulo_frase">Titulo Frase</string>
    <string name="texto_frase">Texto Frase</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="image_delete">image_delete</string>
    <string name="image_edit">image_edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Menu Prueba</string>
    <string name="edit_task">EDIT TASK</string>
    <string name="title_activity_tabbed_tasks">TabbedTasks</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="signup">SIGNUP</string>
</resources>
