<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.tasker.activities.EditTaskActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/edit_task_title"
        android:textColor="@color/white"
        android:textSize="@dimen/page_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/task_title_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_task_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/task_comment_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_task_name" />

    <EditText
        android:id="@+id/et_task_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_desc_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_task_comment" />

    <TextView
        android:id="@+id/tv_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"

        android:text="@string/task_priority_title"
        android:textSize="@dimen/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_task_desc" />


    <RadioGroup
        android:id="@+id/rg_prior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_priority">

        <RadioButton
            android:id="@+id/et_rb_major_prior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_major"
            android:textColor="@color/major_prior_task" />

        <RadioButton
            android:id="@+id/et_rb_medium_prior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_medium"
            android:textColor="@color/medium_prior_task" />

        <RadioButton
            android:id="@+id/et_rb_minor_prior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_minor"
            android:textColor="@color/minor_prior_task" />

    </RadioGroup>

    <Spinner
        android:id="@+id/et_users_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_prior" />

    <Button
        android:id="@+id/et_btn_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_users_spinner"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
